change required form parameter for image post api
